fix: annoying scrollbar effect. css repaired

--- a/src/assets/styles/modal.less
+++ b/src/assets/styles/modal.less
@@ -43,4 +43,8 @@
   button.close {
     opacity: 0.6;
   }
+
+}
+.modal-open .modal {
+  overflow-y: scroll;
 }
